# SC2-RL

./: .gitignore  README.md  log.py  main.py  pyproject.toml  requirements.txt
bots/: artanis_bot.py  incredi_bot.py
rl/: deepq.py  sc2env.py
sc2_rl/bots/: artanis_bot.py
sc2_rl/game/: run_game.py
sc2_rl/rl/: deepq.py  sc2env.py
sc2_rl/sc2/: artanis_bot.py
sc2_rl/types/: actions.py  colors.py  constants.py  game.py  rewards.py
